Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
ghx-label-12
Description
TestStatestoredHA.test_statestored_auto_failover failed in UBSAN ARM environment. Here is the stack trace:
Stacktrace custom_cluster/test_statestored_ha.py:340: in test_statestored_auto_failover self.__test_statestored_auto_failover() custom_cluster/test_statestored_ha.py:259: in __test_statestored_auto_failover "statestore.active-status", expected_value=True, timeout=120) common/impala_service.py:144: in wait_for_metric_value self.__metric_timeout_assert(metric_name, expected_value, timeout) common/impala_service.py:213: in __metric_timeout_assert assert 0, assert_string E AssertionError: Metric statestore.active-status did not reach value True in 120s. E Dumping debug webpages in JSON format... E Dumped memz JSON to $IMPALA_HOME/logs/metric_timeout_diags_20240917_00:07:51/json/memz.json E Dumped metrics JSON to $IMPALA_HOME/logs/metric_timeout_diags_20240917_00:07:51/json/metrics.json E Dumped queries JSON to $IMPALA_HOME/logs/metric_timeout_diags_20240917_00:07:51/json/queries.json E Dumped sessions JSON to $IMPALA_HOME/logs/metric_timeout_diags_20240917_00:07:51/json/sessions.json E Dumped threadz JSON to $IMPALA_HOME/logs/metric_timeout_diags_20240917_00:07:51/json/threadz.json E Dumped rpcz JSON to $IMPALA_HOME/logs/metric_timeout_diags_20240917_00:07:51/json/rpcz.json E Dumping minidumps for impalads/catalogds... E Dumped minidump for Impalad PID 3729004 E Dumped minidump for Impalad PID 3729007 E Dumped minidump for Impalad PID 3729011 E Dumped minidump for Catalogd PID 3728915
Maybe 120 seconds timeout is not enough in UBSAN ARM environment?